Resolved sidebar doc order & overflow display issue
- Fixed incorrect child doc ordering in the left sidebar
- Improved CSS to handle overflow when many docs are present in the sidebar

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -349,6 +349,9 @@ body.single-docs.ezd-theme-docly .ezd-page_breadcrumb:not(.ezd-breadcrumb) {
 .nav-sidebar {
   margin: 0;
 }
+.nav-sidebar.ezd-list-unstyled {
+  margin-bottom: 40px;
+}
 .nav-sidebar > .nav-item > .doc-link {
   padding: 10px;
   border-radius: 5px;
